hdone/objects/ResponseCategory__mdt.object
<CustomObject>
    <description>Junction for Responses and Categories. Enables same response to be placed into multiple categories</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category MDT</description>
        <inlineHelpText>Category MDT</inlineHelpText>
        <label>Category</label>
        <referenceTo>Category__mdt</referenceTo>
        <relationshipLabel>ResponseCategories</relationshipLabel>
        <relationshipName>ResponseCategories</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is record active?</description>
        <inlineHelpText>Is record active?</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product MDT</description>
        <inlineHelpText>Product MDT</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product__mdt</referenceTo>
        <relationshipLabel>ResponseCategories</relationshipLabel>
        <relationshipName>ResponseCategories</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ResponseMapping__c</fullName>
        <description>ResponseMapping MDT</description>
        <inlineHelpText>ResponseMapping MDT</inlineHelpText>
        <label>ResponseMapping</label>
        <referenceTo>ResponseMapping__mdt</referenceTo>
        <relationshipLabel>ResponseCategories</relationshipLabel>
        <relationshipName>ResponseCategories</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Sf2SfSetting__c</fullName>
        <description>Sf2SfSetting MDT. Essentially the customer for which this applies. Enables same response to be used on different categories based on customer</description>
        <inlineHelpText>Sf2SfSetting MDT</inlineHelpText>
        <label>Sf2SfSetting</label>
        <referenceTo>Sf2SfSetting__mdt</referenceTo>
        <relationshipLabel>ResponseCategories</relationshipLabel>
        <relationshipName>ResponseCategories</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>ResponseCategory</label>
    <pluralLabel>ResponseCategories</pluralLabel>
</CustomObject>